--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   - bash scripts/ci/setup
   - bash scripts/build
   - cd www
-  - drush si ethosia --db-url=mysql://root:@127.0.0.1/drupal --account-pass=admin --yes
+  - drush si ibli --db-url=mysql://root:@127.0.0.1/drupal --account-pass=admin --yes
   - drush cc all --yes
   # Use drush migrate command to import dummy content, as user 1, so we don't have node access issues.
   # - drush mi --all --user=1
@@ -32,7 +32,7 @@ before_script:
   - cd ..
 
   # Create a behat configuration file.
-  - cd ethosia/behat
+  - cd ibli/behat
   - cp behat.local.yml.travis behat.local.yml
 
   # Create Drush alias.
@@ -47,7 +47,7 @@ script:
   # - sleep 3 # give xvfb some time to start
 
   # start a web server on port 8080, run in the background; wait for initialization
-  - drush @ethosia runserver 127.0.0.1:8080 &
+  - drush @ibli runserver 127.0.0.1:8080 &
   - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
 
   # Run selenium.
