--- a/scripts/build
+++ b/scripts/build
@@ -10,7 +10,7 @@ cd $ROOT
 
 # Build the profile itself.
 (
-  cd ethosia
+  cd ibli
   $DRUSH make --no-core --contrib-destination drupal-org.make .
   cd ..
 )
@@ -27,7 +27,7 @@ cd $ROOT
   rm -Rf www || true
 
   # Build core.
-  $DRUSH make ethosia/drupal-org-core.make www
+  $DRUSH make ibli/drupal-org-core.make www
 
   # Restore the sites directory.
   if [ -d sites-backup ]; then
@@ -36,5 +36,5 @@ cd $ROOT
   fi
 
   # Move the profile in place.
-  ln -s ../../ethosia www/profiles/ethosia
+  ln -s ../../ibli www/profiles/ibli
 )
