--- a/apps/bower.json
+++ b/apps/bower.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
+    "angular-scenario": "1.2.16",
+    "leaflet": "~0.7.2",
+    "angular-leaflet-directive": "~0.7.7"
   }
 }
