--- a/apps/bower.json
+++ b/apps/bower.json
@@ -11,12 +11,12 @@
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
     "angular-route": "1.2.16",
-    "angular-apimock": "*"
+    "angular-apimock": "*",
+    "leaflet": "~0.7.2",
+    "angular-leaflet-directive": "~0.7.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16",
-    "leaflet": "~0.7.2",
-    "angular-leaflet-directive": "~0.7.7"
+    "angular-scenario": "1.2.16"
   }
 }
